docs: documented imports and improved swagger documentation
